--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <a href="index.html" id="logo">
-                <img src="assets/logo.png">
+                <img src="logo.png">
             </a>
             <h1>
                 Filipino Community
@@ -44,8 +44,8 @@
             </div>
         </div>
         <footer>
-            <a href="http://twitter.com/NunouraYuji"><img src="assets/twitter-wrap.png" alt="twitter logo" class="social-icon"></a>
-            <a href="http://facebook.com/yujinunoura"><img src="assets/facebook-wrap.png"    alt="facebook logo" class="social-icon"></a>
+            <a href="http://twitter.com/NunouraYuji"><img src="twitter-wrap.png" alt="twitter logo" class="social-icon"></a>
+            <a href="http://facebook.com/yujinunoura"><img src="facebook-wrap.png"    alt="facebook logo" class="social-icon"></a>
             <p>© PH Kyoto 2016</p>
         </footer>
     </body>
