--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <title>PH Kyoto</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="/normalize.css">
-        <link rel="stylesheet" href="/main.css">
-        <link rel="stylesheet" href="/responsive.css"
+        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="responsive.css"
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
