--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>PH Kyoto</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="normalize.css">
-        <link rel="stylesheet" href="stylesheets/main.css">
+        <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="responsive.css">
         <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
         <meta name="viewport" content="width=device-width, initial-scale=1">
