--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <a href="index.html" id="logo">
-                <img src="assets/logo.png">
+                <img src="logo.png">
             </a>
             <h1 class="sub-title">
                 <font color="red">Filipino</font><font color="yellow">Community</font>
