--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Photo Blog</title>
-	<link rel="stylesheet" href="stylesheets/main.css" type="text/css">
+	<link rel="stylesheet" href="/stylesheets/main.css" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
