--- a/index.html
+++ b/index.html
@@ -1,31 +1,61 @@
-<!DOCTYPE html>
+</!DOCTYPE html>
+<html>
 <head>
 	<meta charset="utf-8">
-	<title>Photo Blog</title>
-	<link rel="stylesheet" href="/stylesheets/main.css" type="text/css">
-	<link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet">
+	<title>Portfolio-Projcet</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link rel="stylesheet" href="app.css">
+	<link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
 </head>
 <body>
-	<p id="brand"> YNunoura </p>
-	
-								<!-- Images -->
-	<img src="http://c1.staticflickr.com/9/8450/8026519634_f33f3724ea_b.jpg"> 
-	<img src="http://c2.staticflickr.com/8/7218/7209301894_c99d3a33c2_h.jpg"> 
-	<img src="http://c2.staticflickr.com/8/7231/6947093326_df216540ff_b.jpg"> 
+<!-- NAVBAR -->
+<nav class="navbar navbar-default">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Travel Space</a>
+    </div>
 
-	<img src="http://c1.staticflickr.com/9/8788/17367410309_78abb9e5b6_b.jpg"> 
-	<img src="http://c2.staticflickr.com/6/5814/20700286354_762c19bd3b_b.jpg"> 
-	<img src="http://c2.staticflickr.com/6/5647/21137202535_404bf25729_b.jpg"> 
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Contact</a></li>
+		<li><a href="#">About</a></li>      
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Sign Up <i class="fa fa-user-plus" aria-hidden="true"></i></a></li>
+        <li><a href="#">Login <i class="fa fa-sign-in" aria-hidden="true"></i></a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+<!-- CONTENT -->
+<div class="container">
+	<div class="row">
+		<div class="col-lg-12">
+				<div id="content">
+					<h1>Travel Space</h1>
+					<hr>
+					<button class="btn btn-default btn-lg">Get Started
+					</button>
+			</div>
+		</div>
+	</div>
+</div>
 
-	<img src="http://c2.staticflickr.com/6/5588/14991687545_5c8e1a2e86_b.jpg"> 
-	<img src="http://c2.staticflickr.com/4/3888/14878097108_5997041006_b.jpg"> 
-	<img src="http://c2.staticflickr.com/8/7579/15482110477_0b0e9e5421_b.jpg">
 
-	<footer>
-		<p> 	&copy; YNunoura. <br>
-				All rights reserved
-	    </p>
-	</footer>
+	<!-- JQuery -->
+	<script   src="http://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>
+	<!-- Javascript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
 </html>
